--- a/app/partials/us/us-detail.jade
+++ b/app/partials/us/us-detail.jade
@@ -90,10 +90,7 @@ div.wrapper(
             edit-permission = "modify_us"
         )
 
-        tg-history(
-            ng-model="us"
-            type="us"
-        )
+        tg-history-section
 
     sidebar.menu-secondary.sidebar.ticket-data
 
