History tabs lenght

--- a/app/partials/us/us-detail.jade
+++ b/app/partials/us/us-detail.jade
@@ -90,7 +90,11 @@ div.wrapper(
             edit-permission = "modify_us"
         )
 
-        tg-history-section
+        tg-history-section(
+            ng-if="us"
+            type="us"
+            id="us.id"
+        )
 
     sidebar.menu-secondary.sidebar.ticket-data
 
