--- a/app/modules/history/history/history-templates/history-description.jade
+++ b/app/modules/history/history/history-templates/history-description.jade
@@ -3,10 +3,10 @@
         translate="ACTIVITY.FIELDS.DESCRIPTION"
     )
     p.diff(
-        ng-if="diff[0]"
-        ng-bind-html="diff[0]"
+        ng-if="vm.diff[0]"
+        ng-bind-html="vm.diff[0]"
     )
     p.diff(
-        ng-if="diff[1]"
-        ng-bind-html="diff[1]"
+        ng-if="vm.diff[1]"
+        ng-bind-html="vm.diff[1]"
     )
