--- a/app/modules/history/history/history-templates/history-subject.jade
+++ b/app/modules/history/history/history-templates/history-subject.jade
@@ -2,8 +2,8 @@
     span.key(
         translate="ACTIVITY.FIELDS.SUBJECT"
     )
-    span.diff(ng-if="diff[0]") {{diff[0]}}
+    span.diff(ng-if="vm.diff[0]") {{vm.diff[0]}}
     tg-svg(
         svg-icon="icon-arrow-right"
     )
-    span.diff(ng-if="diff[1]") {{diff[1]}}
+    span.diff(ng-if="vm.diff[1]") {{vm.diff[1]}}
