--- a/app/modules/history/history/history-templates/history-milestone.jade
+++ b/app/modules/history/history/history-templates/history-milestone.jade
@@ -2,10 +2,10 @@
     span.key(
         translate="ACTIVITY.FIELDS.MILESTONE"
     )
-    span.diff(ng-if="diff[0] != null") {{diff[0]}}
-    span.diff(ng-if="diff[0] == null") ...
+    span.diff(ng-if="vm.diff[0] != null") {{vm.diff[0]}}
+    span.diff(ng-if="vm.diff[0] == null") ...
     tg-svg(
         svg-icon="icon-arrow-right"
     )
-    span.diff(ng-if="diff[1] != null") {{diff[1]}}
-    span.diff(ng-if="diff[1] == null") ...
+    span.diff(ng-if="vm.diff[1] != null") {{vm.diff[1]}}
+    span.diff(ng-if="vm.diff[1] == null") ...
