--- a/app/modules/history/history/history.jade
+++ b/app/modules/history/history/history.jade
@@ -1,6 +1,6 @@
 section.activities
     .activities-wrapper
-        .activity(ng-repeat="activity in vm.activities")
+        .activity(ng-repeat="activity in activities")
             img.activity-avatar(
                 ng-src="{{activity.user.photo}}"
                 ng-alt="{{activity.user.name}}"
@@ -10,57 +10,10 @@ section.activities
                     span.activity-creator {{activity.user.name}}
                     span.activity-date {{activity.created_at | momentFormat:'DD MMM YYYY HH:mm'}}
                 p.activity-text(ng-if="activity.comment") {{activity.comment}}
+                
                 .activity-diff(
                     ng-repeat="(key, diff) in activity.values_diff"
+                    tg-history-diff
+                    type='key'
+                    diff='diff'
                 )
-
-                    .diff-wrapper(
-                        ng-if="key == 'points'"
-                    )
-                        include history-templates/history-points
-
-                    .diff-wrapper(
-                        ng-if="key == 'attachments'"
-                    )
-                        include history-templates/history-attachments
-
-                    .diff-wrapper(
-                        ng-if="key == 'milestone'"
-                    )
-                        include history-templates/history-milestone
-
-                    .diff-wrapper(
-                        ng-if="key == 'status'"
-                    )
-                        include history-templates/history-status
-
-                    .diff-wrapper(
-                        ng-if="key == 'subject'"
-                    )
-                        include history-templates/history-subject
-
-                    .diff-wrapper(
-                        ng-if="key == 'description_diff'"
-                    )
-                        include history-templates/history-description
-
-                    .diff-wrapper(
-                        ng-if="key == 'assigned_to'"
-                    )
-                        include history-templates/history-assigned
-
-                    .diff-wrapper(
-                        ng-if="key == 'tags'"
-                        ng-init="res = vm.removeTags(diff[0], diff[1])"
-                    )
-                        p(
-                            ng-if="res.diffRemoveTags"
-                            translate="ACTIVITY.TAGS_REMOVED"
-                            translate-values="{tags: res.diffRemoveTags}"
-                        )
-                        p(
-                            ng-if="res.diffAddTags"
-                            translate="ACTIVITY.TAGS_ADDED"
-                            translate-values="{tags: res.diffAddTags}"
-                        )
-                        
