--- a/app/modules/history/comments/comments.scss
+++ b/app/modules/history/comments/comments.scss
@@ -1,12 +1,16 @@
 .comments {
     .comment {
         align-items: flex-start;
+        border-bottom: 1px solid $whitish;
         display: flex;
         padding: 2rem 0;
         &:hover {
             .comment-option {
                 opacity: 1;
             }
+        }
+        &.deleted-comment {
+            padding: 1rem 0;
         }
     }
     .comment-avatar {
@@ -49,5 +53,39 @@
                 fill: $red;
             }
         }
+    }
+    .deleted-comment-wrapper {
+        width: 100%;
+    }
+    .deleted-comment-main {
+        @include font-size(xsmall);
+        color: $gray-light;
+        display: flex;
+        width: 100%;
+    }
+    .toggle-deleted-comment {
+        color: $primary;
+        fill: $primary;
+        margin: 0 1rem;
+        .icon-arrow-down,
+        .icon-arrow-up {
+            @include svg-size(.8rem);
+            margin-left: .25rem;
+        }
+    }
+    .restore-comment {
+        margin-left: auto;
+        transition: all .2s;
+        &:hover {
+            color: $primary;
+            fill: $primary;
+        }
+        .icon-reload {
+            @include svg-size(.8rem);
+            margin-right: .25rem;
+        }
+    }
+    .deleted-comment-comment {
+        margin-top: 1rem;
     }
 }
