--- a/app/modules/history/comments/comments.jade
+++ b/app/modules/history/comments/comments.jade
@@ -21,11 +21,13 @@ section.comments
                         svg-icon="icon-edit"
                         svg-title-translate="COMMON.EDIT"
                         ng-click="vm.editComment()"
+                        ng-if="::vm.canEditDeleteComment(comment.user)"
                     )
                     tg-svg.comment-option(
                         svg-icon="icon-trash"
                         svg-title-translate="COMMON.DELETE"
                         ng-click="vm.onDeleteComment({commentId: comment.id})"
+                        ng-if="::vm.canEditDeleteComment(comment.user)"
                     )
             .deleted-comment-wrapper(
                 ng-if="comment.delete_comment_date"
@@ -33,8 +35,9 @@ section.comments
                 .deleted-comment-main
                     span(
                         translate="COMMENTS.DELETED_INFO"
-                        translate-values="{user: comment.delete_comment_user.name, date: comment.delete_comment_date}"
+                        translate-values="{user: comment.delete_comment_user.name }"
                     )
+                    span - {{comment.delete_comment_date | momentFormat:'DD MMM YYYY HH:mm'}}
                     a.toggle-deleted-comment(
                         href=""
                         ng-click="vm.showDeletedComment()"
@@ -57,7 +60,7 @@ section.comments
                         )
                     a.restore-comment(
                         href=""
-                        ng-click="vm.restoreDeletedComment()"
+                        ng-click="vm.onRestoreDeletedComment({commentId: comment.id})"
                     )
                         tg-svg(
                             svg-icon="icon-reload"
