--- a/app/modules/history/comments/comments.scss
+++ b/app/modules/history/comments/comments.scss
@@ -1,9 +1,5 @@
 .comments {
     .comment {
-        align-items: flex-start;
-        border-bottom: 1px solid $whitish;
-        display: flex;
-        padding: 2rem 0;
         &:hover {
             .comment-option {
                 opacity: 1;
@@ -12,6 +8,12 @@
         &.deleted-comment {
             padding: 1rem 0;
         }
+    }
+    .comment-wrapper {
+        align-items: flex-start;
+        border-bottom: 1px solid $whitish;
+        display: flex;
+        padding: 2rem 0;
     }
     .comment-avatar {
         flex-basis: 50px;
