--- a/app/partials/us/us-detail.jade
+++ b/app/partials/us/us-detail.jade
@@ -93,6 +93,7 @@ div.wrapper(
         tg-history-section(
             ng-if="us"
             type="us"
+            name="us"
             id="us.id"
         )
 
