--- a/app/modules/history/history-tabs/history-tabs.jade
+++ b/app/modules/history/history-tabs/history-tabs.jade
@@ -19,7 +19,21 @@ nav.history-tabs
         href=""
         title="Order Comments"
         ng-click="onOrderComments()"
-        ng-class="{'new-first': top, 'old-first': !top}"    
+        ng-class="{'new-first': top, 'old-first': !top}"
     ) 
-        span Older First
-        tg-svg(svg-icon="icon-arrow-down")
+        span(
+            translate="COMMENTS.OLDER_FIRST"
+            ng-if="onReverse"
+        )
+        tg-svg(
+            svg-icon="icon-arrow-down"
+            ng-if="onReverse"
+        )
+        span(
+            translate="COMMENTS.RECENT_FIRST"
+            ng-if="!onReverse"
+        )
+        tg-svg(
+            svg-icon="icon-arrow-up"
+            ng-if="!onReverse"
+        )
