--- a/app/modules/history/history.jade
+++ b/app/modules/history/history.jade
@@ -6,6 +6,7 @@ section.history
         on-order-comments="vm.onOrderComments()"
         comments-num="vm.commentsNum"
         activities-num="vm.activitiesNum"
+        on-reverse="vm.reverse"
     )
     tg-comments(
         ng-if="vm.viewComments"
