--- a/app/modules/history/history.jade
+++ b/app/modules/history/history.jade
@@ -14,6 +14,7 @@ section.history
         on-delete-comment="vm.deleteComment(commentId)"
         on-restore-deleted-comment="vm.restoreDeletedComment(commentId)"
         on-add-comment="vm.addComment()"
+        on-edit-comment="vm.editComment(commentId, commentData)"
         type="vm.type"
         name="{{vm.name}}"
         loading="vm.loading"
