--- a/app/modules/history/history-lightbox/comment-history-lightbox.scss
+++ b/app/modules/history/history-lightbox/comment-history-lightbox.scss
@@ -6,6 +6,7 @@
     }
     .history-wrapper {
         max-height: 600px;
+        overflow-x: hidden;
         overflow-y: auto;
         padding: 2rem;
     }
