Fix comment creation

--- a/app/modules/history/history.jade
+++ b/app/modules/history/history.jade
@@ -16,6 +16,7 @@ section.history
         on-add-comment="vm.addComment()"
         on-edit-comment="vm.editComment(commentId, commentData)"
         object="{{vm.id}}"
+        type="vm.type"
         name="{{vm.name}}"
         loading="vm.loading"
     )
