Fix preview in comments

--- a/app/modules/history/comments/comment.scss
+++ b/app/modules/history/comments/comment.scss
@@ -5,6 +5,11 @@
         textarea {
             height: 3rem;
         }
+        .preview-icon,
+        .edit {
+            position: absolute;
+            right: 1rem;
+        }
     }
     .save-comment-wrapper {
         align-items: flex-end;
