--- a/app/modules/history/history.jade
+++ b/app/modules/history/history.jade
@@ -19,6 +19,7 @@ section.history
         type="vm.type"
         name="{{vm.name}}"
         loading="vm.loading"
+        project-id="vm.projectId"
     )
     tg-history(
         ng-if="!vm.viewComments"
