--- a/app/partials/us/us-detail.jade
+++ b/app/partials/us/us-detail.jade
@@ -95,6 +95,7 @@ div.wrapper(
             type="us"
             name="us"
             id="us.id"
+            project-id="projectId"
         )
 
     sidebar.menu-secondary.sidebar.ticket-data
