history entry lightbox

--- a/app/modules/history/history-lightbox/history-entry.jade
+++ b/app/modules/history/history-lightbox/history-entry.jade
@@ -13,5 +13,5 @@
                 ng-click="displayFullEntry=!displayFullEntry"
             )
         p.entry-text(
-            ng-class="{'ellipsis': displayFullEntry}"
+            ng-class="{'ellipsis': !displayFullEntry}"
         ) {{entry.comment}}
