--- a/app/modules/history/history-lightbox/history-entry.scss
+++ b/app/modules/history/history-lightbox/history-entry.scss
@@ -34,6 +34,7 @@
         cursor: pointer;
         fill: $primary;
         margin-left: auto;
+        transform: rotate(0);
         transition: transform .2s;
         &.inactive {
             transform: rotate(180deg);
