--- a/app/modules/history/history-tabs/history-tabs.jade
+++ b/app/modules/history/history-tabs/history-tabs.jade
@@ -20,8 +20,9 @@ nav.history-tabs
         title="Order Comments"
         ng-click="onOrderComments()"
         ng-class="{'new-first': top, 'old-first': !top}"
-        ng-if="commentsNum > 1"
-    ) 
+        ng-if="commentsNum > 1 && activeTab"
+    )
+    
         span(
             translate="COMMENTS.OLDER_FIRST"
             ng-if="onReverse"
